--- a/src/styles/Rating.css
+++ b/src/styles/Rating.css
@@ -1,10 +1,12 @@
 .rating {
   text-align: center;
-  align-self: center;
+  /* align-self: center; */
+  padding: 2px 16px 2px 8px;
+  border-right: solid 1px rgba(255,255,255,0.1);
 }
 
 .rating-value {
-  font-size: larger;
+  font-size: large;
 }
 
 .vote:hover {
