feat: add async actions, integrate into components

--- a/src/styles/InlineEdit.css
+++ b/src/styles/InlineEdit.css
@@ -6,10 +6,19 @@
   width: 100%;
 }
 
-#edit-input {
+.edit-input {
   box-sizing: border-box;
   width: 100%;
   font-size: 1em;
+  background-color: rgba(0,0,0,0.05);
+  border: none;
+  border-left: solid 4px rgba(0,0,0,0);
+  outline: none;
+  padding: 2px 2px 2px 8px;
+}
+
+.edit-input-changed {
+  border-left: solid 4px paleturquoise;
 }
 
 .inline-edit-editable {
@@ -40,4 +49,9 @@
 
 .pull-right {
   float: right;
+}
+
+.post-title {
+  font-weight: bold;
+  color: #545454;
 }
