--- a/src/styles/Comment.css
+++ b/src/styles/Comment.css
@@ -1,15 +1,15 @@
 .comment {
   padding: 10px;
-  margin: 1.75px;  
-  margin-left: 20px;
-  max-width: 780px;
-
-  background-color: #676767;
-  color: rgba(255,255,255, 0.75);
+  margin: 1.75px;
+  background-color: #ececec;
+  color: #222222;
 }
 
 .comment:hover {
-  background-color: #414141;
+  border-left: solid 2px grey;
+  margin-left: -2px;
+  background-color: #fdfdfd;
+  padding-left: 12px;
 }
 
 .comment-row {
@@ -17,7 +17,7 @@
 }
   
 .comment-content {
-  margin: 0 25px;
+  margin: 0 8px;
   width: 100%;
 }
   
