--- a/src/styles/NewPost.css
+++ b/src/styles/NewPost.css
@@ -1,12 +1,13 @@
 .new-post {
-  padding: 20px;
   
 }
 
 .new-post-collapsed {
   float: right;
-  /* margin: 15px 0; */
 }
 
 .new-post-expanded {
+  padding: 40px 15px 20px;
+  max-width: 600px;
+  margin: 0 auto;
 }
