--- a/src/styles/Sort.css
+++ b/src/styles/Sort.css
@@ -2,7 +2,8 @@
   font-size: small;
   color: rgb(140, 140, 140);
   margin-top: 4px;
-  float: left;
+  margin-left: 6px;
+  float: right;
 }
 
 .sort-option:hover {
