feat: style New Comment

--- a/src/styles/NewPost.css
+++ b/src/styles/NewPost.css
@@ -7,7 +7,17 @@
 }
 
 .new-post-expanded {
-  padding: 40px 15px 20px;
   max-width: 600px;
-  margin: 0 auto;
+  margin: 40px auto 20px;
+  background-color: #f0f0f0;
+  padding: 0 20px 20px 20px;
+  border: solid 1px #d8d8d8;
+}
+
+.separator {
+  border: solid 1px #ececec;
+}
+
+.new-post-headline {
+  color: #54546b;
 }
