feat: update styling

--- a/src/styles/NavbarContainer.css
+++ b/src/styles/NavbarContainer.css
@@ -12,6 +12,10 @@
   border-left: solid 6px paleturquoise;
 }
 
+.navbar-logo:hover {
+  cursor: pointer;
+}
+
 .navbar-categories {
   margin-left: 20px;
 }
